fix overflow-x and font-size

--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ html {
 body {
 	background: black;
 	font-family: "sharp_grotesklight_20", sans-serif;
-	font-size: 1.2rem
+	font-size: 1.2rem;
+	overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5 {
